# Argus

./: .gitignore  1.launch.py  CLAUDE.md  CMakeLists.txt  README.md  angle_trigger_node.cpp  camerainfo.py  package.xml  ros2 launch hikvision_ros2_driver standa.go  start_sensors.sh  trigger.py
config/: MID360_config.json  camera_info.yaml  camera_lidar.rviz  camera_params.yaml  camere_lidar.rviz  fast_lio_mid360.yaml  fastlio.rviz
launch/: 1.launch.py  drivers.launch.py  hik_camera.launch.yaml  mapping_trigger.launch.py  slam.launch.py  start_argus.sh  tools.launch.py
scripts/: camera_info.py  trigger.py
sh/: start_argus.sh
src/: angle_trigger_node.cpp  image_rotate_node.cpp
src/hikvision_ros2_driver/hikvision_ros2_driver/launch/: camera_info.yaml  standalone.launch.yaml
